--- a/src/components/Table/table.module.scss
+++ b/src/components/Table/table.module.scss
@@ -31,6 +31,11 @@
                             cursor: pointer;
                             transition: .2s ease;
 
+                            svg {
+                                width: 1em;
+                                height: 1em;
+                            }
+
                             &.selected-sort {
                                 transform-origin: center center;
                                 scale: 1.1;
